Fix title spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,7 +35,7 @@ p {
 
 h1, h2, h3 {
   font-family: 'Young Serif', serif;
-
+  line-height: 2.1rem; 
 }
 
 h1 {
